--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-body {
+/*body {
   text-align: center;
   font-family: courier;
   background-image: url("../assets/image.jpeg");
@@ -105,6 +105,53 @@ body {
 
 .share-button:hover .share__link:nth-of-type(4) {
   transition-delay: 0.4s;
+}
+
+* {
+	margin: 0;
+}
+
+:root {
+	--black: rgba(0, 0, 0, 0.9);
+}
+
+html, body {
+	height: 100%;
+}
+
+body {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: var(--black);
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial,
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 1em;
+}
+
+main {
+	background: rgba(255, 255, 255, 0.85);
+	padding: 0.25em;
+	font-size: 2em;
+}
+
+table {
+	border-collapse: collapse;
+}
+
+tbody tr td:first-child:before {
+	content: '#';
+	display: inline-block
+}
+
+tbody tr:nth-child(even) {
+    background-color: #f2f2f2
+}
+
+td {
+	text-align: center;
+	padding: 0.25em
 }
 
 #contact h1 {
