--- a/css/styles.css
+++ b/css/styles.css
@@ -21,14 +21,7 @@ body {
   font-size: 1em;
 }
 
-/*body {
-  text-align: center;
-  font-family: courier;
-  background-image: url("../assets/image.jpeg");
-  background-repeat: no-repeat;
-  background-size: 100%;
-}
-
+/*
 .share__icon {
   width: 32px;
   height: 32px;
